Changes after feedback